<resources>
    <string name="app_name">Packages Inc.</string>
    <string name="action_settings">Settings</string>
    <string name="scandit_default_app_key">osXG5EFmg/u1VaDRVcDq4HMV33qU2p8pg/fotfVkgq4</string>
    <string name="tex_box_placeholder_package_id">Package ID</string>
    <string name="button_send_text">Send</string>
    <string name="button_Attribute_text">Input Attributes?</string>
    <string name="default_attribute_text">Attributes Empty</string>
    <string name="default_sent_text">Attributes Empty</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_scan_barcode">Scan Barcode</string>
    <string name="spinner">Template:</string>

    <string name="pref_title">Database Options</string>
    <string name="template_list_title">Attribute Template Options</string>
    <string name="template_summary">Add or remove templates for attributes</string>
    <string name="id_title">Identity Pool ID</string>
    <string name="id_summary">Enter your Identity Pool ID</string>
    <string name="region_title">Region</string>
    <string name="region_summary">Enter your Region</string>

</resources>
